Bug 168139 - LibreOffice crash asserts with Skia/Vulkan on X11 (gen) VCL backend
Summary: LibreOffice crash asserts with Skia/Vulkan on X11 (gen) VCL backend
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2025-08-27 14:16 UTC by Hossein
Modified: 2025-08-28 09:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2025-08-27 14:16:54 UTC
Description:
LibreOffice X11 (gen) VCL backend is a good platform for testing. Unfortunately, it crashes with Skia enabled. This happens both for Skia/Raster: tdf#168138 and Skia/Vulkan (this report).

Steps to Reproduce:
1. Build LibreOffice core on Linux
2. Try Vulkan/Vulkan on X11:

export SAL_USE_VCLPLUGIN=gen
export SAL_SKIA=vulkan
instdir/program/soffice --writer

Actual Results:
Upon opening a new Writer, etc. window, LibreOffice crashes immediately.

Expected Results:
No crash should happen


Reproducible: Always


User Profile Reset: No

Additional Info:
LibreOffice with Skia/Vulkan itself works fine with LibreOffice 25.8 stable:

Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 12; OS: Linux 6.2; UI render: Skia/Vulkan; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

But with the latest LO 26.2 dev master, it faces with crash assert in a debug build:

$ instdir/program/soffice --version
LibreOfficeDev 26.2.0.0.alpha0 f6411560817dd9e2c07564eef100dcb8f995804f


$ instdir/program/soffice --writer
...
soffice.bin: vcl/skia/x11/salvd.cxx:83: virtual bool X11SkiaSalVirtualDevice::SetSize(tools::Long, tools::Long, bool): Assertion `!bAlphaMaskTransparent && "TODO"' failed.

By disabling the assertion in vcl/skia/x11/salvd.cxx:83, LibreOffice works normally.
Comment 1 Commit Notification 2025-08-28 09:05:50 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4fe73837a0dacf47412a7c6dc5a3a24de3404ee8

tdf#168139 Avoid assertion failure on X11 with Skia/Vulkan

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.